# E2E protocol tests (requires running MySQL 8.4+ or 9.x at localhost:13308)

function(mes_add_e2e_gtest target source)
  add_executable(${target} ${source} test_e2e_main.cpp)
  target_link_libraries(${target} PRIVATE mes-core GTest::gtest)
  target_compile_options(${target} PRIVATE -fno-exceptions -fno-rtti)
  target_compile_definitions(${target} PRIVATE MES_PROJECT_ROOT="${CMAKE_SOURCE_DIR}")
  gtest_discover_tests(${target} DISCOVERY_TIMEOUT 30)
endfunction()

mes_add_e2e_gtest(test_e2e_protocol test_e2e_protocol.cpp)
mes_add_e2e_gtest(test_e2e_auth test_e2e_auth.cpp)
mes_add_e2e_gtest(test_e2e_ssl test_e2e_ssl.cpp)
mes_add_e2e_gtest(test_e2e_binlog_dml test_e2e_binlog_dml.cpp)
mes_add_e2e_gtest(test_e2e_binlog_ddl test_e2e_binlog_ddl.cpp)
mes_add_e2e_gtest(test_e2e_engine test_e2e_engine.cpp)
mes_add_e2e_gtest(test_e2e_buffer test_e2e_buffer.cpp)
